[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anoncred"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Luis Díaz", email = "ldiazn98@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["fastapi[standard]", "sqlmodel", "httpx"]

[project.urls]
Documentation = "https://github.com/Luis Díaz/anoncred#readme"
Issues = "https://github.com/Luis Díaz/anoncred/issues"
Source = "https://github.com/Luis Díaz/anoncred"

[tool.hatch.version]
path = "src/anoncred/__about__.py"

[tool.hatch.metadata]
# This is required to specify the userauth_py with an explicit path
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "click",
  "black",
  "pytest-postgresql",
  "pytest-asyncio",
  "pytest-docker",
  "pytest-benchmark",
]

path = ".venv/"
[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/anoncred tests}"

[tool.coverage.run]
source_pkgs = ["anoncred", "tests"]
branch = true
parallel = true
omit = ["src/anoncred/__about__.py"]

[tool.coverage.paths]
anoncred = ["src/anoncred", "*/anoncred/src/anoncred"]
tests = ["tests", "*/anoncred/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
